Updates from Overleaf

--- a/chapter1-intro.tex
+++ b/chapter1-intro.tex
@@ -129,7 +129,7 @@ To improve accuracy, recommender systems might need to model these temporal and 
 
 In some cases, due to technical limitations or lack of data, the system fails to present users their items of interest, so users might end up clicking on the items that are not reflective of their interest. This data might enter the training data and bias the input for the subsequent iterations. The points mentioned above are just a few examples of underlying confounding factors behind variability in user behavior that make the prediction task challenging in these systems.
 
-Even if the users' behavior is consistent and ideal accuracy is reachable, users' preferences might not conform to fairness concerns. This might be because users are inherently biased or simply because users are unaware of the unfairness in a system. As an example, Kiva.org's lenders might not be aware of the unprivileged borrowers in the system. Therefore, supporting loans only based on their preferences might further exacerbate the unfairness of capital distribution in the system. 
+Even if the users' behavior is consistent and ideal accuracy is reachable, users' preferences might not conform to fairness concerns. This might be because users are inherently biased or simply because users are unaware of the unfairness in a system. As an example, Kiva.org's lenders might not be aware of the unprivileged borrowers in the system. Therefore, supporting loans only based on their preferences might further exacerbate the unfairness of capital distribution in the system.
 
 % This is partly because users' 
 % to keep up with the variability in users' rating behavior
@@ -165,7 +165,8 @@ The collected data used for training recommendation models might not reflect the
 % how is accuracy and popularity related
 % \todo[inline]{define accuracy}
 
-Recommendation datasets are usually intertwined with popularity bias \cite{celma2008hits,lee2014fairness}. Striving to reach high accuracy will often lead to reinforcing popularity bias~\cite{barocas2016big}. It is known that these systems affect the users’ opinions, and hence, their ratings of items \cite{Cosley2003Influence}. Thus, a user’s rating of an item is might be their intrinsic preference, the influence of the recommender system on the user, or a combination of both. Users are more likely to click on the items that recommender systems deliver to them. This phenomenon is called \textit{presentation bias} \cite{baeza2018bias}. 
+Recommendation datasets are usually intertwined with popularity bias \cite{celma2008hits,lee2014fairness}. Striving to reach high accuracy will often lead to reinforcing popularity bias~\cite{barocas2016big}. It is known that these systems affect users’ opinions, \cite{Cosley2003Influence}. Thus, a user’s rating of an item might be their intrinsic preference, or based on the influence of the recommender system, or a combination of both. Users are more likely to click on the items that recommender systems deliver to them. This phenomenon is called \textit{presentation bias} \cite{baeza2018bias}.
+
 Over time, items gain even more popularity as they are shown to users, up to the point that less popular items are not recommended at all. Due to this positive feedback loop, the item space shrinks, and the recommendation lists become too homogeneous \cite{Chaney2018Homogeneity}. The formed \textit{filter bubble} might be harmful or unfair to users as users' choices become limited and homogeneous, preventing them from receiving novel content or ideas. A real-world example of the harms that filter bubbles cause for users is the influence of the news feeds on people's mindset that can eventually lead to political polarization~\cite{HONG2016777}.
 
 % These algorithms might also propagate the existing biases in the data \cite{barocas2016big}. For example, recommender systems increase the popularity of items by just presenting those items to the users.
