--- a/chapter4-methodology.tex
+++ b/chapter4-methodology.tex
@@ -121,6 +121,7 @@ I performed the experiments on the following public and proprietary datasets: Mo
 
 
 \section{Recommender Systems}  
+\label{sec:recsyssec}
     
     The increasing use of the Web in the mid-nineties as a medium for e-commerce transactions had an important role in enhancing the Recommender System techniques. The primary goal of a recommendation system is to assist users in choosing their favorite item among millions of products such as music, books, or even choosing a new friend on social media platforms. Using the Web facilitates the data collection process and receiving feedback from users. This feedback could be in the explicit form like a score, ratings of users on items, or likes. It could also be in an implicit form, such as clicks, views, or purchases. Thus, the Web helps the recommendation system algorithms learn more about their users’ preferences and recommend more personalized items to choose from. 
     
