--- a/refs.bib
+++ b/refs.bib
@@ -1,5 +1,7 @@
 % This file was created with JabRef 2.5.
 % Encoding: Cp1252
+
+
 @inproceedings{surer2018multistakeholder,
   title={Multistakeholder recommendation with provider constraints},
   author={S{\"u}rer, {\"O}zge and Burke, Robin and Malthouse, Edward C},
@@ -4219,11 +4221,7 @@ Independence for a Find-Good-Items Task},
 }
 
 
-%-----------------------------------------
-%-----------------------------------------
 
-% This file was created with JabRef 2.5.
-% Encoding: Cp1252
 @MISC{Bradley01improvingrecommendation,
     author = {Keith Bradley and Barry Smyth},
     title = {Improving Recommendation Diversity},
@@ -4440,11 +4438,6 @@ series = {UMAP '17}
 }
 
 
-
-%-------------------------------------------
-%-------------------------------------------
-% This file was created with JabRef 2.5.
-% Encoding: Cp1252
 
 
 @incollection{rokach2005clustering,
@@ -6694,5 +6687,494 @@ pages = {3224–3233},
 numpages = {10},
 location = {Virtual Event, CA, USA},
 series = {KDD '20}
+}
+
+
+
+@article{Ekstrand_2020,
+   title={LensKit for Python: Next-Generation Software for Recommender Systems Experiments},
+   ISBN={9781450368599},
+   url={http://dx.doi.org/10.1145/3340531.3412778},
+   DOI={10.1145/3340531.3412778},
+   journal={Proceedings of the 29th ACM International Conference on Information \& Knowledge Management},
+   publisher={ACM},
+   author={Ekstrand, Michael D.},
+   year={2020},
+   month={Oct}
+}
+
+
+@inproceedings{Sonboli2020FARLA,
+author = {Sonboli, Nasim and Burke, Robin and Liu, Zijun and Mansoury, Masoud},
+title = {Fairness-Aware Recommendation with Librec-Auto},
+year = {2020},
+isbn = {9781450375832},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3383313.3411525},
+doi = {10.1145/3383313.3411525},
+booktitle = {Fourteenth ACM Conference on Recommender Systems},
+pages = {594–596},
+numpages = {3},
+keywords = {Experimentation, Fairness, Librec, Recommender Systems Frameworks, Reranking},
+location = {Virtual Event, Brazil},
+series = {RecSys '20}
+}
+
+@inproceedings{guo2017deepfm,
+  title={DeepFM: a factorization-machine based neural network for CTR prediction},
+  author={Guo, Huifeng and Tang, Ruiming and Ye, Yunming and Li, Zhenguo and He, Xiuqiang},
+  booktitle={Proceedings of the 26th International Joint Conference on Artificial Intelligence},
+  pages={1725--1731},
+  year={2017}
+}
+
+@inproceedings{guo2015librec,
+  title={LibRec: A Java Library for Recommender Systems.},
+  author={Guo, Guibing and Zhang, Jie and Sun, Zhu and Yorke-Smith, Neil},
+  booktitle={UMAP Workshops},
+  volume={4},
+  year={2015}
+}
+
+@inproceedings{wu2016collaborative,
+  title={Collaborative denoising auto-encoders for top-n recommender systems},
+  author={Wu, Yao and DuBois, Christopher and Zheng, Alice X and Ester, Martin},
+  booktitle={Proceedings of the ninth ACM international conference on web search and data mining},
+  pages={153--162},
+  year={2016}
+}
+
+@inproceedings{sedhain2015autorec,
+  title={Autorec: Autoencoders meet collaborative filtering},
+  author={Sedhain, Suvash and Menon, Aditya Krishna and Sanner, Scott and Xie, Lexing},
+  booktitle={Proceedings of the 24th international conference on World Wide Web},
+  pages={111--112},
+  year={2015}
+}
+
+@misc{rohde2018recogym,
+      title={RecoGym: A Reinforcement Learning Environment for the problem of Product Recommendation in Online Advertising}, 
+      author={David Rohde and Stephen Bonner and Travis Dunlop and Flavian Vasile and Alexandros Karatzoglou},
+      year={2018},
+      eprint={1808.00720},
+      archivePrefix={arXiv},
+      primaryClass={cs.IR}
+}
+
+@misc{mladenov2021recsim,
+      title={RecSim NG: Toward Principled Uncertainty Modeling for Recommender Ecosystems}, 
+      author={Martin Mladenov and Chih-Wei Hsu and Vihan Jain and Eugene Ie and Christopher Colby and Nicolas Mayoraz and Hubert Pham and Dustin Tran and Ivan Vendrov and Craig Boutilier},
+      year={2021},
+      eprint={2103.08057},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+
+
+@inproceedings{joachims2018reveal,
+  title={REVEAL 2018: offline evaluation for recommender systems},
+  author={Joachims, Thorsten and Swaminathan, Adith and Raimond, Yves and Koch, Olivier and Vasile, Flavian},
+  booktitle={Proceedings of the 12th ACM Conference on Recommender Systems},
+  pages={514--515},
+  year={2018}
+}
+
+@inproceedings{joachims2019reveal,
+  title={REVEAL 2019: closing the loop with the real world: reinforcement and robust estimators for recommendation},
+  author={Joachims, Thorsten and Dimakopoulou, Maria and Swaminathan, Adith and Raimond, Yves and Koch, Olivier and Vasile, Flavian},
+  booktitle={Proceedings of the 13th ACM Conference on Recommender Systems},
+  pages={568--569},
+  year={2019}
+}
+
+@inproceedings{joachims2020reveal,
+  title={REVEAL 2020: Bandit and Reinforcement Learning from User Interactions},
+  author={Joachims, Thorsten and Raimond, Yves and Koch, Olivier and Dimakopoulou, Maria and Vasile, Flavian and Swaminathan, Adith},
+  booktitle={Fourteenth ACM Conference on Recommender Systems},
+  pages={628--629},
+  year={2020}
+}
+
+@inproceedings{said2014comparative,
+  title={Comparative recommender system evaluation: benchmarking recommendation frameworks},
+  author={Said, Alan and Bellog{\'\i}n, Alejandro},
+  booktitle={Proceedings of the 8th ACM Conference on Recommender systems},
+  pages={129--136},
+  year={2014}
+}
+
+@inproceedings{sun2020we,
+  title={Are we evaluating rigorously? benchmarking recommendation for reproducible evaluation and fair comparison},
+  author={Sun, Zhu and Yu, Di and Fang, Hui and Yang, Jie and Qu, Xinghua and Zhang, Jie and Geng, Cong},
+  booktitle={Fourteenth ACM Conference on Recommender Systems},
+  pages={23--32},
+  year={2020}
+}
+
+@article{bird2020fairlearn,
+  title={Fairlearn: A toolkit for assessing and improving fairness in AI},
+  author={Bird, Sarah and Dud{\'\i}k, Miro and Edgar, Richard and Horn, Brandon and Lutz, Roman and Milan, Vanessa and Sameki, Mehrnoosh and Wallach, Hanna and Walker, Kathleen},
+  journal={Microsoft, Tech. Rep. MSR-TR-2020-32},
+  year={2020}
+}
+
+
+@article{bellamy2019ai,
+  title={AI Fairness 360: An extensible toolkit for detecting and mitigating algorithmic bias},
+  author={Bellamy, Rachel KE and Dey, Kuntal and Hind, Michael and Hoffman, Samuel C and Houde, Stephanie and Kannan, Kalapriya and Lohia, Pranay and Martino, Jacquelyn and Mehta, Sameep and Mojsilovi{\'c}, Aleksandra and others},
+  journal={IBM Journal of Research and Development},
+  volume={63},
+  number={4/5},
+  pages={4--1},
+  year={2019},
+  publisher={IBM}
+}
+
+@misc{saleiro2018aequitas,
+  title={Aequitas: A bias and fairness audit toolkit},
+  author={Saleiro, Pedro and Kuester, Benedict and Hinkson, Loren and London, Jesse and Stevens, Abby and Anisfeld, Ari and Rodolfa, Kit T and Ghani, Rayid},
+  numpages={19},
+  journal={arXiv preprint arXiv:1811.05577},
+  year={2018}
+}
+
+@article{scikitfair2019,
+  title={scikit-fairness},
+  author={Matthijs Vincent et. al},
+  journal={https://github.com/koaning/scikit-fairness },
+  year={2019}
+}
+
+@inproceedings{SriramLifT2020,
+author = {Vasudevan, Sriram and Kenthapadi, Krishnaram},
+title = {LiFT: A Scalable Framework for Measuring Fairness in ML Applications},
+year = {2020},
+isbn = {9781450368599},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3340531.3412705},
+doi = {10.1145/3340531.3412705},
+booktitle = {Proceedings of the 29th ACM International Conference on Information \& Knowledge Management},
+pages = {2773–2780},
+numpages = {8},
+keywords = {fairness-aware machine learning, scalable framework, distributed computation, linkedin fairness toolkit},
+location = {Virtual Event, Ireland},
+series = {CIKM '20}
+}
+
+@article{ahn2019fairsight,
+  title={Fairsight: Visual analytics for fairness in decision making},
+  author={Ahn, Yongsu and Lin, Yu-Ru},
+  journal={IEEE transactions on visualization and computer graphics},
+  volume={26},
+  number={1},
+  pages={1086--1095},
+  year={2019},
+  publisher={IEEE}
+}
+
+@inproceedings{akiba2019optuna,
+  title={Optuna: A next-generation hyperparameter optimization framework},
+  author={Akiba, Takuya and Sano, Shotaro and Yanase, Toshihiko and Ohta, Takeru and Koyama, Masanori},
+  booktitle={Proceedings of the 25th ACM SIGKDD international conference on knowledge discovery \& data mining},
+  pages={2623--2631},
+  year={2019}
+}
+
+
+@inproceedings{mansoury2020fairmatch,
+  title={Fairmatch: A graph-based approach for improving aggregate diversity in recommender systems},
+  author={Mansoury, Masoud and Abdollahpouri, Himan and Pechenizkiy, Mykola and Mobasher, Bamshad and Burke, Robin},
+  booktitle={Proceedings of the 28th ACM Conference on User Modeling, Adaptation and Personalization},
+  pages={154--162},
+  year={2020}
+}
+
+
+
+@inproceedings{li2017neural,
+  title={Neural rating regression with abstractive tips generation for recommendation},
+  author={Li, Piji and Wang, Zihao and Ren, Zhaochun and Bing, Lidong and Lam, Wai},
+  booktitle={Proceedings of the 40th International ACM SIGIR conference on Research and Development in Information Retrieval},
+  pages={345--354},
+  year={2017}
+}
+
+@article{rendle2012bpr,
+  title={BPR: Bayesian personalized ranking from implicit feedback},
+  author={Rendle, Steffen and Freudenthaler, Christoph and Gantner, Zeno and Schmidt-Thieme, Lars},
+  journal={arXiv preprint arXiv:1205.2618},
+  year={2012}
+}
+
+@inproceedings{hsieh2017collaborative,
+  title={Collaborative metric learning},
+  author={Hsieh, Cheng-Kang and Yang, Longqi and Cui, Yin and Lin, Tsung-Yi and Belongie, Serge and Estrin, Deborah},
+  booktitle={Proceedings of the 26th international conference on world wide web},
+  pages={193--201},
+  year={2017}
+}
+
+@inproceedings{he2017neural,
+  title={Neural collaborative filtering},
+  author={He, Xiangnan and Liao, Lizi and Zhang, Hanwang and Nie, Liqiang and Hu, Xia and Chua, Tat-Seng},
+  booktitle={Proceedings of the 26th international conference on world wide web},
+  pages={173--182},
+  year={2017}
+}
+
+@inproceedings{xue2017deep,
+  title={Deep Matrix Factorization Models for Recommender Systems.},
+  author={Xue, Hong-Jian and Dai, Xinyu and Zhang, Jianbing and Huang, Shujian and Chen, Jiajun},
+  booktitle={IJCAI},
+  volume={17},
+  pages={3203--3209},
+  year={2017},
+  organization={Melbourne, Australia}
+}
+
+@inproceedings{Sapiezynski2019Quant,
+author = {Sapiezynski, Piotr and Zeng, Wesley and E Robertson, Ronald and Mislove, Alan and Wilson, Christo},
+title = {Quantifying the Impact of User Attention on Fair Group Representation in Ranked Lists},
+year = {2019},
+isbn = {9781450366755},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3308560.3317595},
+doi = {10.1145/3308560.3317595},
+booktitle = {Companion Proceedings of The 2019 World Wide Web Conference},
+pages = {553–562},
+numpages = {10},
+keywords = {group fairness, information retrieval, ranked lists},
+location = {San Francisco, USA},
+series = {WWW '19}
+}
+
+@article{friedler-impossibility-2021,
+author = {Friedler, Sorelle A. and Scheidegger, Carlos and Venkatasubramanian, Suresh},
+title = {The (Im)Possibility of Fairness: Different Value Systems Require Different Mechanisms for Fair Decision Making},
+year = {2021},
+issue_date = {April 2021},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {64},
+number = {4},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/3433949},
+doi = {10.1145/3433949},
+abstract = {What does it mean to be fair?},
+journal = {Commun. ACM},
+month = mar,
+pages = {136–143},
+numpages = {8}
+}
+
+@article{ekstrand2021exploring,
+  title={Exploring author gender in book rating and recommendation},
+  author={Ekstrand, Michael D and Kluver, Daniel},
+  journal={User Modeling and User-Adapted Interaction},
+  pages={1--44},
+  year={2021},
+  publisher={Springer}
+}
+
+
+@inproceedings{argyriou2020microsoft,
+author = {Argyriou, Andreas and Gonz\'{a}lez-Fierro, Miguel and Zhang, Le},
+title = {Microsoft Recommenders: Best Practices for Production-Ready Recommendation Systems},
+year = {2020},
+isbn = {9781450370240},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3366424.3382692},
+doi = {10.1145/3366424.3382692},
+booktitle = {Companion Proceedings of the Web Conference 2020},
+pages = {50–51},
+numpages = {2},
+keywords = {Libraries, Recommender systems, Algorithms},
+location = {Taipei, Taiwan},
+series = {WWW '20}
+}
+
+
+
+@InProceedings{pmlr-v28-bergstra13,
+  title = 	 {Making a Science of Model Search: Hyperparameter Optimization in Hundreds of Dimensions for Vision Architectures},
+  author = 	 {Bergstra, James and Yamins, Daniel and Cox, David},
+  booktitle = 	 {Proceedings of the 30th International Conference on Machine Learning},
+  pages = 	 {115--123},
+  year = 	 {2013},
+  editor = 	 {Dasgupta, Sanjoy and McAllester, David},
+  volume = 	 {28},
+  number =       {1},
+  series = 	 {Proceedings of Machine Learning Research},
+  address = 	 {Atlanta, Georgia, USA},
+  month = 	 {17--19 Jun},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v28/bergstra13.pdf},
+  url = 	 {https://proceedings.mlr.press/v28/bergstra13.html},
+}
+
+ @misc{recbole,
+    title={RecBole: Towards a Unified, Comprehensive and Efficient Framework for Recommendation Algorithms},
+    author={Wayne Xin Zhao and Shanlei Mu and Yupeng Hou and Zihan Lin and Kaiyuan Li and Yushuo Chen and Yujie Lu and Hui Wang and Changxin Tian and Xingyu Pan and Yingqian Min and Zhichao Feng and Xinyan Fan and Xu Chen and Pengfei Wang and Wendi Ji and Yaliang Li and Xiaoling Wang and Ji-Rong Wen},
+    year={2020},
+    numpages={23},
+    journal={arXiv preprint arXiv:2011.01731},
+    primaryClass={cs.IR}
+}
+
+@inproceedings{MicrosoftRecommenders,
+author = {Argyriou, Andreas and Gonz\'{a}lez-Fierro, Miguel and Zhang, Le},
+title = {Microsoft Recommenders: Best Practices for Production-Ready Recommendation Systems},
+year = {2020},
+isbn = {9781450370240},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3366424.3382692},
+doi = {10.1145/3366424.3382692},
+booktitle = {Companion Proceedings of the Web Conference 2020},
+pages = {50–51},
+numpages = {2},
+location = {Taipei, Taiwan},
+series = {WWW '20}
+}
+
+@inproceedings{MyMediaLite,
+author = {Gantner, Zeno and Rendle, Steffen and Freudenthaler, Christoph and Schmidt-Thieme, Lars},
+title = {MyMediaLite: A Free Recommender System Library},
+year = {2011},
+isbn = {9781450306836},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2043932.2043989},
+doi = {10.1145/2043932.2043989},
+booktitle = {Proceedings of the Fifth ACM Conference on Recommender Systems},
+pages = {305–308},
+numpages = {4},
+location = {Chicago, Illinois, USA},
+series = {RecSys '11}
+}
+
+@article{piotte2009pragmatic,
+  title={The pragmatic theory solution to the netflix grand prize},
+  author={Piotte, Martin and Chabbert, Martin},
+  year={2009},
+  publisher={Citeseer}
+}
+
+@inbook{LensKit2020,
+author = {Ekstrand, Michael D.},
+title = {LensKit for Python: Next-Generation Software for Recommender Systems Experiments},
+year = {2020},
+isbn = {9781450368599},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3340531.3412778},
+booktitle = {Proceedings of the 29th ACM International Conference on Information \& Knowledge Management},
+pages = {2999–3006},
+numpages = {8}
+}
+
+@article{ekstrand2019lenskit,
+  title={LensKit Documentation},
+  author={Ekstrand, Michael D},
+  year={2019}
+}
+
+@inproceedings{DRecPy2020,
+author = {Cola\c{c}o, F\'{a}bio and Barros, M\'{a}rcia and Couto, Francisco M.},
+title = {DRecPy: A Python Framework for Developing Deep Learning-Based Recommenders},
+year = {2020},
+isbn = {9781450375832},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3383313.3418483},
+doi = {10.1145/3383313.3418483},
+booktitle = {Fourteenth ACM Conference on Recommender Systems},
+pages = {675–680},
+numpages = {6},
+location = {Virtual Event, Brazil},
+series = {RecSys '20}
+}
+
+@article{anelli2021elliot,
+  title={Elliot: a comprehensive and rigorous framework for reproducible recommender systems evaluation},
+  author={Anelli, Vito Walter and Bellog{\'\i}n, Alejandro and Ferrara, Antonio and Malitesta, Daniele and Merra, Felice Antonio and Pomo, Claudio and Donini, Francesco Maria and Di Noia, Tommaso},
+  journal={arXiv preprint arXiv:2103.02590},
+  year={2021}
+}
+
+@techreport{hahsler2015recommenderlab,
+  title={recommenderlab: A framework for developing and testing recommendation algorithms},
+  author={Hahsler, Michael},
+  year={2015}
+}
+
+@inproceedings{wu2019neural,
+  title={Neural news recommendation with multi-head self-attention},
+  author={Wu, Chuhan and Wu, Fangzhao and Ge, Suyu and Qi, Tao and Huang, Yongfeng and Xie, Xing},
+  booktitle={Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)},
+  pages={6389--6394},
+  year={2019}
+}
+
+@article{Hug2020,
+  doi = {10.21105/joss.02174},
+  url = {https://doi.org/10.21105/joss.02174},
+  year = {2020},
+  publisher = {The Open Journal},
+  volume = {5},
+  number = {52},
+  pages = {2174},
+  author = {Nicolas Hug},
+  title = {Surprise: A Python library for recommender systems},
+  journal = {Journal of Open Source Software}
+}
+
+@inproceedings{burke2020facct_libauto,
+author = {Burke, Robin Douglas and Mansoury, Masoud and Sonboli, Nasim},
+title = {Experimentation with Fairness-Aware Recommendation Using Librec-Auto: Hands-on Tutorial},
+year = {2020},
+isbn = {9781450369367},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3351095.3375670},
+doi = {10.1145/3351095.3375670},
+booktitle = {Proceedings of the 2020 Conference on Fairness, Accountability, and Transparency},
+pages = {700},
+numpages = {1},
+location = {Barcelona, Spain},
+series = {FAT* '20}
+}
+
+
+@inproceedings{mansoury2019algorithm,
+  title={Algorithm Selection with Librec-auto.},
+  author={Mansoury, Masoud and Burke, Robin},
+  pages={11-17},
+  year={2019},
+  url={http://ceur-ws.org/Vol-2360/paper3LibRecAuto.pdf},
+  booktitle={The 1st Interdisciplinary Workshop on Algorithm Selection and Meta-Learning in Information Retrieval (AMIR). Co-located with the 41st European Conference on Information Retrieval (ECIR). http://amir-workshop.org/},
+  location={Cologne, Germany},
+  editor={Joeran Beel and Lars Kotthoff}
+  
+}
+
+@inproceedings{mansoury2018automating,
+author = {Mansoury, Masoud and Burke, Robin and Ordonez-Gauger, Aldo and Sepulveda, Xavier},
+title = {Automating Recommender Systems Experimentation with Librec-Auto},
+year = {2018},
+isbn = {9781450359016},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3240323.3241614},
+doi = {10.1145/3240323.3241614},
+pages = {500–501},
+numpages = {2},
+location = {Vancouver, British Columbia, Canada},
+series = {RecSys '18}
 }
 
