--- a/chapter2-recsys.tex
+++ b/chapter2-recsys.tex
@@ -1,7 +1,7 @@
 \chapter{Recommender Systems}
 \label{ch:recsys}
 
-    This chapter will be added after the submission of the draft to the committee. The fundamental concepts about recommender systems are added as a section in the Chapter \ref{ch:methodology}.
+    This chapter will be added after the submission of the draft to the committee. The fundamental concepts about recommender systems are added in Chapter \ref{ch:methodology}, Section \ref{sec:recsyssec}.
 
 % intro
 % goals of recsys
